--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "require": {
 		"php": "~7.2",
         "laravel/framework": "5.8.*|^6.0",
+        "dannyvankooten/laravel-vat": "^2.0.3",
         "softworx/rocxolid": "*",
         "softworx/rocxolid-design": "*",
         "softworx/rocxolid-admin": "*",
